--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning Node Express and MongdDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js",
+    "start": "node server"
   },
   "keywords": [
     "nodejs",
@@ -16,6 +17,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "mongoose": "^5.9.18"
+    "mongoose": "^5.9.18",
+    "nodemon": "^2.0.4"
   }
 }
